# zorroOS

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  COPYING  Cargo.toml  Makefile  README.md  bootstrap.yml  build.py  cross_file.txt  make_image.sh
Fox Kernel/: Cargo.toml  Logo.tga  Stage1.tga  Stage2.tga  Stage3.tga  Stage4.tga  rust-toolchain
Fox Kernel/src/: Allocator.rs  CommandLine.rs  Console.rs  ELF.rs  Framebuffer.rs  Memory.rs  PageFrame.rs  Process.rs  Scheduler.rs  Stack.rs  Syscall.rs  main.rs
Fox Kernel/src/AMD64/: ACPI.rs  APIC.rs  GDT.rs  IDT.rs  Memory.rs  Syscall.rs  Task.rs  link.ld  mod.rs
Fox Kernel/src/Drivers/Generic/: Framebuffer.rs  Keyboard.rs  PseudoTTY.rs  UNIXPipe.rs  UNIXStreamDevs.rs  mod.rs
Fox Kernel/src/FS/: DevFS.rs  InitrdFS.rs  TmpFS.rs  VFS.rs  mod.rs
Fox Kernel/targets/: AMD64.json  RiscV64.json
Raven Kernel/: Cargo.toml
Raven Kernel/.cargo/: config
Raven Kernel/src/: Allocator.rs  Console.rs  Framebuffer.rs  Memory.rs  PageFrame.rs  Process.rs  Scheduler.rs  main.rs
Raven Kernel/src/AMD64/: ACPI.rs  APIC.rs  HPET.rs  IDT.rs  Memory.rs  Syscall.rs  Task.rs  Timer.rs  UART.rs  link.ld  mod.rs
Raven Kernel/src/Drivers/: mod.rs
Raven Kernel/src/FS/: DevFS.rs  RootFS.rs  VFS.rs  mod.rs
Userspace/Libraries/Mockingbird/: Cargo.toml
kernel/: Cargo.toml  Makefile  build.rs  build.zig  generate_symbols.py  gensymtab.py  main.v  v.mod
kernel/arch/x86_64/: acpi.zig  apic.zig  context.zig  gdt.zig  hart.zig  idt.zig  io.zig  isr.S  isr.s  isr.zig  main.zig  physmem.zig  ps2kbd.zig  syscall.s  syscall.zig
kernel/architectures/riscv64/: paging.c  paging.h  riscv64.c  sbi.c  sbi.h  start.s
kernel/architectures/x86_64/: Context.h  FB.c  FB.h  IDT.c  IDT.h  ISR.S  Limine.h  PortIO.h  entry.S  framebuffer.c  framebuffer.h  gdt.c  gdt.h  logger.h  pio.h  pmm.c  pmm.h  x86_64.c
kernel/cheaders/: pthread.h  stdio.h  string.h
kernel/link_scripts/: RiscV64-Generic.ld  x86_64-Limine.ld  x86_64-PC.ld
kernel/modules/alloc/: alloc.v
kernel/modules/api/: syscall_ids.v
kernel/modules/arch/: arch.v
kernel/modules/ksync/: atomic.v  ksync.v  lock.v
kernel/modules/panic/: panic.v
kernel/modules/stubs/: stubs.v
kernel/modules/utils/: string.v
kernel/modules/zorro_builtin/: zorro_builtin.v
kernel/src/: Panic.c  aatree.zig  alloc.zig  hart.zig  interfaces.rs  kbd.zig  main.c  main.rs  main.zig  object.zig  spinlock.zig  team.zig  thread.zig  universe.zig
kernel/src/Compositor/: MouseCursor.c  Window.c
kernel/src/Graphics/: Framebuffer.c  Images.c
kernel/src/Include/: Misc.h  Panic.h
kernel/src/Utilities/: Logging.c  String.c
kernel/src/alloc/: alloc.c  alloc.h
kernel/src/arch/: arch.h
kernel/src/memory/: freelist.rs  mod.rs
kernel/src/objects/: area.h  method.h  object.c  object.h  object.zig  object_manager.c  thread.h  thread.zig  universe.zig
kernel/src/panic/: panic.c  panic.h  panic_images.h
kernel/src/scheduler/: scheduler.h  thread.h
kernel/src/sync/: lock.c  lock.h
kernel/src/util/: avl.c  avl.h  string.c  string.h  vec.h
(+343 files in other folders)
