[package]
name = "foxkernel"
version = "0.0.2"
authors = ["Talon396"]
edition = "2021"
description = "A UNIX-like Kernel"
license = "Apache-2.0"

[dependencies]
spin = "*"
xmas-elf = "*"
log = "*"
cstr_core = "*"
cpio_reader = "*"
tinytga = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[profile.dev]
opt-level = 3
debug = 0

[profile.dev.package."*"]
opt-level = 3
debug = 0

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = {version="*",features=["nightly"]}
limine = "*"
acpi = "*"
rsdp = "*"
xhci = "*"
