[package]
name = "foxkernel"
version = "0.0.2"
authors = ["Talon396"]
edition = "2021"
description = "A UNIX-like Kernel"
license = "Apache-2.0"

[dependencies]
xmas-elf = "*"
log = "*"
cstr_core = "*"
cpio_reader = "*"
tinytga = "*"

[dependencies.spin]
version = "*"
default-features = false
features = ["once","mutex","spin_mutex"]

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[profile.dev]
opt-level = 3
debug = 0

[profile.dev.package."*"]
opt-level = 3
debug = 0

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = {version="*",features=["nightly"]}
limine = { git = "https://github.com/limine-bootloader/limine-rs", rev = "91a7b5941576004edc99b81ec2e65dec6d629250" }
acpi = "*"
rsdp = "*"
xhci = "*"
