[package]
name = "ravenkernel"
version = "0.0.2"
authors = ["TalonTheRaven"]
edition = "2021"
description = "A UNIX-like Kernel"
license = "Apache-2.0"

[dependencies]
spin = "0.9"
buddy_system_allocator = {version="*",features=["use_spin","const_fn"]}
xmas-elf = "0.8"
log = "*"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
opt-level = 3
debug = 0

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = {version="0.14",features=["nightly"]}
stivale-boot = "0.2"
acpi = "*"
rsdp = "*"
xhci = "*"