[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
interfaces = { path = "../arch/interfaces" }
static-linkedlist = "*"

[target.'cfg(target_arch = "riscv64")'.dependencies]
arch = { path = "../arch/RiscV64" }