[package]
name = "Mockingbird"
version = "0.1.0"
edition = "2021"
description = "Low-Level Library for developing applications for owlOS"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "*"
linked_list_allocator = { version = "*", optional = true, features = ["use_spin", "use_spin_nightly"] }
lazy_static = { version = "*", optional = true, features = ["spin_no_std"] }

[lib]
name = "Mockingbird"
crate-type = ["rlib"]

[features]
alloc = ["dep:lazy_static","dep:linked_list_allocator"]